<resources>
    <string name="app_name">MeatAndBread</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cat">cat</string>
    <string name="welcome_back">مرحبا بعودتك   </string>

    <string name="pro_meat">لحوم مصنعه</string>
    <string name="meats">لحوم</string>
    <string name="hawawshi">حواوشي</string>


    <string name="kofta">كفته بلدي</string>
    <string name="koftaDetails">الكفتة البلدية هي عبارة عن لحم مفروم مخلوط بالبصل والثوم والتوابل , تتميز الكفتة البلدية بمذاقها اللذيذ وطعمها الغني , متوفرة دائماً.</string>
    <string name="burger">برجر بلدي</string>
    <string name="burgerDetails">البرجر البلدي هو عبارة عن لحم مفروم مخلوط بالبصل والثوم والتوابل، ثم يُشكل على شكل أقراص , يتميز البرجر البلدي بمذاقه اللذيذ وقوامه الطري , متوفرة دائماً.</string>


    <string name="meat1">موزة</string>
    <string name="meat1Details">لحم الموزة هو لحم طري يُقطع من فخذي العجل، ويكون سعر الكيلو منه ٣١٠ جنيه. يتميز لحم الموزة بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والحديد.</string>
    <string name="meat2"> تربيانكو</string>
    <string name="meat2Details">لحم عرق التربيانكو هو لحم طري يُقطع من ظهر العجل، ويكون سعر الكيلو منه ٣١٠ جنيه. يتميز لحم عرق التربيانكو بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والحديد.</string>
    <string name="meat3">وش فخده</string>
    <string name="meat3Details">لحم وش الفخذ هو لحم طري يُقطع من مقدمة الفخذ، ويكون سعر الكيلو منه ٣١٠ جنيه. يتميز لحم وش الفخذ بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والحديد.</string>
    <string name="meat4">كولاطه</string>
    <string name="meat4Details">لحم الكولاثة هو لحم غني بالدهون يُقطع من الرقبة، ويكون سعر الكيلو منه ٣٠٠ جنيه. يتميز لحم الكولاثة بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والدهون الصحية.</string>
    <string name="meat5">انتركوت</string>
    <string name="meat5Details">لحم الانتركوت هو لحم طري يُقطع من ظهر العجل، ويكون سعر الكيلو منه ٣٠٠ جنيه. يتميز لحم الانتركوت بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والحديد.</string>
    <string name="meat6">لحم ملبس</string>
    <string name="meat6Details">لحم ملبس هو لحم غني بالدهون يُقطع من البطن، ويكون سعر الكيلو منه ٢٨٠ جنيه. يتميز لحم ملبس بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والدهون الصحية.</string>
    <string name="meat7">دوش</string>
    <string name="meat7Details">لحم الدوش هو لحم غني بالدهون يُقطع من الرقبة، ويكون سعر الكيلو منه ٣٠٠ جنيه. يتميز لحم الدوش بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والدهون الصحية.</string>
    <string name="meat8">قشره اللوح</string>
    <string name="meat8Details">لحم قشره اللوح هو لحم طري يُقطع من ظهر العجل، ويكون سعر الكيلو منه ٣٠٠ جنيه. يتميز لحم قشره اللوح بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والحديد.</string>
    <string name="meat9">عرق فلتو</string>
    <string name="meat9Details">لحم عرق الفلتو هو لحم طري يُقطع من ظهر العجل، ويكون سعر الكيلو منه ٣١٠ جنيه. يتميز لحم عرق الفلتو بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والحديد.</string>
    <string name="meat10">سمانه</string>
    <string name="meat10Details">لحم السمانة هو لحم غني بالدهون يُقطع من البطن، ويكون سعر الكيلو منه ٣١٠ جنيه. يتميز لحم السمانة بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للبروتين والدهون الصحية.</string>
    <string name="meat11">كوارع</string>
    <string name="meat11Details">لحم الكوارع هو لحم غني بالكالسيوم والبروتين، ويكون سعر الكيلو منه ٢٨٠ جنيه. يتميز لحم الكوارع بمذاقه اللذيذ وقوامه الطري، كما أنه يعتبر مصدرًا جيدًا للكالسيوم والبروتين.</string>


    <string name="hwa1">حواوشي بلدي</string>
    <string name="hwa1Details">الحواوشي البلدي هو عبارة عن عجينة عيش محشوة باللحم المفروم والبصل والثوم والتوابل , يتميز الحواوشي البلدي بمذاقه اللذيذ ورائحته الشهية , يستغرق تلت ساعة من وقت طلب الطلب.</string>
    <string name="hwa2">حواوشي خضار</string>
    <string name="hwa2Details">الحواوشي الخضار هو عبارة عن عجينة عيش محشوة بالخضروات مثل الفلفل والطماطم والبصل , يتميز الحواوشي الخضار بمذاقه الخفيف ورائحته الشهية , يستغرق تلت ساعة من وقت طلب الطلب.</string>
    <string name="hwa3">حواوشي مكس جبن</string>
    <string name="hwa3Details">الحواوشي مكس جبن هو عبارة عن عجينة عيش محشوة باللحم المفروم والبصل والثوم والتوابل، بالإضافة إلى الجبن الموزاريلا والجبنة الرومى , يتميز الحواوشي مكس جبن بمذاقه اللذيذ ورائحته الشهية , يستغرق نص ساعة و خمس دقائق من وقت طلب الطلب.</string>
    <string name="hwa4">حواوشي موتزريلا</string>
    <string name="hwa4Details">الحواوشي الموتزريلا هو عبارة عن عجينة عيش محشوة باللحم المفروم والبصل والثوم والتوابل، بالإضافة إلى الجبن الموزاريلا , يتميز الحواوشي الموتزريلا بمذاقه اللذيذ ورائحته الشهية , يستغرق نص ساعة و خمس دقائق من وقت طلب الطلب.</string>
    <string name="hwa5">حواوشي جبنه رومي</string>
    <string name="hwa5Details">الحواوشي الجبنة الرومى هو عبارة عن عجينة عيش محشوة باللحم المفروم والبصل والثوم والتوابل، بالإضافة إلى الجبنة الرومى , يتميز الحواوشي الجبنة الرومى بمذاقه اللذيذ ورائحته الشهية , يستغرق نص ساعة و خمس دقائق من وقت طلب الطلب.</string>
    <string name="hwa6">حواوشي جبن مدخنه</string>
    <string name="hwa6Details">الحواوشي الجبن المدخنة هو عبارة عن عجينة عيش محشوة باللحم المفروم والبصل والثوم والتوابل، بالإضافة إلى الجبن المدخنة , يتميز الحواوشي الجبن المدخنة بمذاقه اللذيذ ورائحته الشهية , يستغرق نص ساعة  و خمس دقائق من وقت طلب الطلب.</string>
    <string name="mealQuantityHwa">١ رغيف</string>
    <string name="mealQuantityHwaUnit">رغيف</string>
    <string name="mealQuantityMeat">٢٥٠  جرام</string>
    <string name="mealQuantityMeatUnit">جرام</string>
    <string name="mealQuantityProMeat">٥٠٠ جرام</string>
    <string name="addToBasket">إضافه الي السلة</string>
    <string name="product_detail">تفاصيل المنتج</string>
    <string name="nutritionsValue"> ١٠٠جـ</string>
    <string name="deatils_product">الكفتة البلدية هي عبارة عن لحم مفروم مخلوط بالبصل والثوم والتوابل , تتميز الكفتة البلدية بمذاقها اللذيذ وطعمها الغني.</string>
    <string name="shareProduct">السلام عليكم  , \n%1$s المنتج رائع جدا وله سعر رخيص جدا، يكلف فقط  \n%2$s جنيه يمكنك شرائه الآن باستخدام تطبيق عيش ولحمه.</string>
    <string name="myCart">سلة المشتريات </string>
    <string name="gotoCheckOut">إرسال</string>


    <string name="channelName">Time</string>
    <string name="title_dialog_of_send_message">اختار الوسيله التي تود الارسال بها</string>
    <string name="WhatApp">الوتساب</string>
    <string name="Messenger">الماسينجر</string>
    <string name="SMS">الرسائل</string>
    <string name="message_of_request"> اريد %1$s %2$s %3$s مقابل %4$s جنيه \n </string>

    <string name="start_of_message">السلام عليكم</string>
    <string name="end_of_message">التكلفة الكلية %1$s</string>


</resources>